2012-10-08 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/include/opcode/ia64.h: added since build
	  on IA64 fails with elf64-ia64.c:27:25: error: opcode/ia64.h:
	  No such file or directory

2012-10-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genPagedPointerGet): fixed bug #3527222
	* support/regression/tests/gcc-torture-execute-921013-1.c: reenabled
	* src/mcs51/gen.c (genCast),
	* src/ds390/gen.c (genCast): fixed bug3467508 regression test failures
	* support/regression/tests/bug3467508.c: reenabled for mcs51 and ds390

2012-10-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asgb/asgb.vcxproj,
	* sdas/asgb/asgb.vcxproj.filters,
	* sdas/asgb/Makefile.in,
	* sdas/asgb/gbext.c: removed gbext.c
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i8051.h,
	* sdas/asgb/gbadr.c,
	* sdas/asgb/gbmch.c,
	* sdas/asrab/rabadr.c,
	* sdas/asz80/z80adr.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/asxxxx.h: and yet another step towards ASxxxx v5

2012-10-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08pst.c,
	* sdas/as8051/i51pst.c,
	* sdas/asgb/gbpst.c,
	* sdas/asrab/rabpst.c,
	* sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asdbg.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/assubr.c,
	* sdas/asxxsrc/asxxxx.h: use ASxxxx v5 file structs

2012-10-06 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/optimize_pic16devices.pl:
	  updated with the latest version from Molnar Karoly
	* support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl: applied patch #3567006 -
	  New support/scripts/pic1[46]-header-parser.pl,
	  thanks to Molnar Karoly

2012-10-05 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/zip-pic16devices.pl,
	  device/include/pic16/pic16devices.txt:
	  applied patch #3574556 - Compressed pic16devices.txt file,
	  thanks to Molnar Karoly